DROOP-365 Modified "Learn more" color on blocks. Changed default backgrounds to more contrast. Fixed headers not displaying proper colors in side embed text block.

--- a/themes/custom/droopler_theme/scss/components/_d_blog.scss
+++ b/themes/custom/droopler_theme/scss/components/_d_blog.scss
@@ -327,7 +327,7 @@ article.node--type-blog-post {
           }
           &.link {
             text-transform: uppercase;
-            color: $color-myrmidon;
+            color: $color-odysseus;
           }
         }
         .node__title {
