--- a/themes/custom/droopler_theme/scss/config/_colors.scss
+++ b/themes/custom/droopler_theme/scss/config/_colors.scss
@@ -39,7 +39,7 @@ $black: #000 !default;
 // but a completely different set of colours. Hence this small experiment.
 
 // The Greeks
-// To use: Thersites Achaeans Diores Leitus
+// To use: Thersites Achaeans Myrmidons Diores Leitus
 
 $color-agamemnon: #ac0000 !default; // Main color, it changes backgrounds, menu and link color.
 $color-menelaus: #5d98ce !default; // Mobile menu link border.
@@ -48,7 +48,6 @@ $color-odysseus: white !default;
 $color-diomedes: #d3d7d9 !default;
 $color-patroclus: #979797 !default;
 $color-thersites: #dee2e6 !default;
-$color-myrmidon: #f7f7f8 !default;
 
 // The Trojans
 // To use: Acamas Chromius Euphemus Hector Demoleon
